bloodhound-tui/src/snapshots/bloodhound_tui__render_tests__exec_tree_expanded_process_lifecycle.snap
---
source: bloodhound-tui/src/render_tests.rs
assertion_line: 89
expression: render(&app)
---
"┌ History (16 commands) ─────────────────┐┌ Output (0 lines) ──────────────────────────────────────────────────────────────────────────────┐"
"│00:00:04 ▾ [pre-session] (50/13301)     ││No terminal output for this command.                                                            │"
"│00:00:04   ├─ /usr/lib/systemd/systemd -││                                                                                                │"
"│00:00:04   ├─ /usr/lib/systemd/user-envi││                                                                                                │"
"│00:00:04   ├─ /usr/lib/systemd/user-gene││                                                                                                │"
"│00:00:04   ├─ /usr/lib/systemd/systemd-e││                                                                                                │"
"│00:00:04   ├─ /bin/systemctl --user set-││                                                                                                │"
"│00:00:04   ├─ sh -c -- /usr/bin/env -i P││                                                                                                │"
"│00:00:04   ├─ /usr/bin/env -i PATH=/usr/││                                                                                                │"
"│00:00:04     ├─ /etc/update-motd.d/00-he││                                                                                                │"
"│00:00:04       ├─ uname -o :305         ││                                                                                                │"
"│00:00:04       ├─ uname -r :306         ││                                                                                                │"
"│00:00:04       └─ uname -m :307         ││                                                                                                │"
"│00:00:04     ├─ /etc/update-motd.d/10-he│└────────────────────────────────────────────────────────────────────────────────────────────────┘"
"│00:00:04     ├─ /etc/update-motd.d/50-mo│┌ Events ────────────────────────────────────────────────────────────────────────────────────────┐"
"│00:00:04     └─ /etc/update-motd.d/60-un││ 1:All │ 2:Exec │ 3:Syscall │ 4:Files │ 5:Network                                               │"
"│00:00:04   ├─ run-parts --lsbsysinit /et│└────────────────────────────────────────────────────────────────────────────────────────────────┘"
"│00:00:04     ├─ /etc/update-motd.d/00-he││ SYS   3 (pid:290 rc=0)                                                                         │"
"│00:00:04       ├─ uname -o :305         ││ SYS   262 (pid:290 rc=0)                                                                       │"
"│00:00:04       ├─ uname -r :306         ││ FILE  openat /etc/passwd (O_RDONLY|O_CLOEXEC) (pid:290 rc=3)                                   │"
"│00:00:04       └─ uname -m :307         ││ SYS   5 (pid:290 rc=0)                                                                         │"
"│00:00:04     ├─ /etc/update-motd.d/10-he││ SYS   8 (pid:290 rc=0)                                                                         │"
"│00:00:04     ├─ /etc/update-motd.d/50-mo││ SYS   read (pid:290 rc=1265)                                                                   │"
"│00:00:04     └─ /etc/update-motd.d/60-un││ SYS   3 (pid:290 rc=0)                                                                         │"
"│00:00:04   ├─ run-parts --lsbsysinit /et││ SYS   102 (pid:290 rc=0)                                                                       │"
"│00:00:04     ├─ /etc/update-motd.d/00-he││ SYS   104 (pid:290 rc=0)                                                                       │"
"│00:00:04       ├─ uname -o :305         ││ SYS   114 (pid:290 rc=0)                                                                       │"
"│00:00:04       ├─ uname -r :306         ││ SYS   113 (pid:290 rc=0)                                                                       │"
"│00:00:04       └─ uname -m :307         ││ SYS   250 (pid:290 rc=245968712)                                                               │"
"│00:00:04     ├─ /etc/update-motd.d/10-he││ SYS   250 (pid:290 rc=0)                                                                       │"
"│00:00:04     ├─ /etc/update-motd.d/50-mo││ SYS   113 (pid:290 rc=0)                                                                       │"
"│00:00:04     └─ /etc/update-motd.d/60-un││ SYS   114 (pid:290 rc=0)                                                                       │"
"│00:00:04   ├─ run-parts --lsbsysinit /et││ FILE  openat  (O_RDONLY) (pid:290 rc=3)                                                        │"
"│00:00:04     ├─ /etc/update-motd.d/00-he││ SYS   5 (pid:290 rc=0)                                                                         │"
"│00:00:04       ├─ uname -o :305         ││ SYS   read (pid:290 rc=4096)                                                                   │"
"│00:00:04       ├─ uname -r :306         ││ SYS   read (pid:290 rc=4096)                                                                   │"
"│00:00:04       └─ uname -m :307         ││ SYS   3 (pid:290 rc=0)                                                                         │"
"│00:00:04     ├─ /etc/update-motd.d/10-he││ FILE  openat /etc/login.defs (O_RDONLY) (pid:290 rc=3)                                         │"
"└────────────────────────────────────────┘└────────────────────────────────────────────────────────────────────────────────────────────────┘"
" 03_process_lifecycle.ndjson  │ 17113 events total │ Command 1/16 │ 13301 events │ ▶ History   j/k:nav  ⏎:expand  Tab:pane  1-5:tab  q:quit "
