bloodhound-tui/src/snapshots/bloodhound_tui__render_tests__initial_render_file_exploration.snap
---
source: bloodhound-tui/src/render_tests.rs
expression: render(&app)
---
"┌ History (10 commands) ─────────────────┐┌ Output (0 lines) ──────────────────────────────────────────────────────────────────────────────┐"
"│00:00:06 ▸ [pre-session] (50/13299)     ││No terminal output for this command.                                                            │"
"│00:00:07 ▸ ls -la /etc/ (1/960)         ││                                                                                                │"
"│00:00:07 ▸ cat /etc/hostname (1/288)    ││                                                                                                │"
"│00:00:08 ▸ head -5 /etc/passwd (1/304)  ││                                                                                                │"
"│00:00:08 ▸ grep "root" /etc/passwd (1/32││                                                                                                │"
"│00:00:09 ▸ wc -l /etc/passwd (1/311)    ││                                                                                                │"
"│00:00:09 ▸ cat /etc/os-release (1/446)  ││                                                                                                │"
"│00:00:10 ▸ cat /etc/shells (1/284)      ││                                                                                                │"
"│00:00:10   exit (24)                    ││                                                                                                │"
"│00:00:10 ▸ logout (1/359)               ││                                                                                                │"
"│                                        ││                                                                                                │"
"│                                        ││                                                                                                │"
"│                                        │└────────────────────────────────────────────────────────────────────────────────────────────────┘"
"│                                        │┌ Events ────────────────────────────────────────────────────────────────────────────────────────┐"
"│                                        ││ 1:Process │ 2:Security │ 3:Files │ 4:Network                                                   │"
"│                                        │└────────────────────────────────────────────────────────────────────────────────────────────────┘"
"│                                        ││ PROC  FORK (0x1200011) (pid:295 rc=297)                                                        │"
"│                                        ││ PROC  execve /usr/lib/systemd/systemd [/usr/lib/systemd/systemd --user] (pid:295 rc=0)         │"
"│                                        ││ PROC  FORK (0x1200011) (pid:295 rc=298)                                                        │"
"│                                        ││ PROC  FORK (0x1200011) (pid:298 rc=299)                                                        │"
"│                                        ││ PROC  execve /usr/lib/systemd/user-environment-generators/30-systemd-environment-d-generator [/│"
"│                                        ││ PROC  FORK (0x1200011) (pid:295 rc=300)                                                        │"
"│                                        ││ PROC  FORK (0x1200011) (pid:300 rc=301)                                                        │"
"│                                        ││ PROC  execve /usr/lib/systemd/user-generators/systemd-xdg-autostart-generator [/usr/lib/systemd│"
"│                                        ││ PROC  FORK (CLONE_FS|CLONE_SIGHAND|CLONE_NEWNS|CLONE_NEWUTS|CLONE_NEWIPC|CLONE_NEWUSER|CLONE_NE│"
"│                                        ││ PROC  execve /proc/self/fd/9 [/usr/lib/systemd/systemd-executor --deserialize 12 --log-level in│"
"│                                        ││ PROC  execve /bin/systemctl [/bin/systemctl --user set-environment DBUS_SESSION_BUS_ADDRESS=uni│"
"│                                        ││ PROC  FORK (CLONE_FS|CLONE_SIGHAND|CLONE_THREAD|CLONE_NEWNS) (pid:291 rc=304)                  │"
"│                                        ││ PROC  execve /bin/sh [sh -c -- /usr/bin/env -i PATH=/usr/local/sbin:/usr/local/bin:/usr/sbin:/u│"
"│                                        ││ PROC  execve /usr/bin/env [/usr/bin/env -i PATH=/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/b│"
"│                                        ││ PROC  execve /usr/local/sbin/run-parts [run-parts --lsbsysinit /etc/update-motd.d] (pid:305 rc=│"
"│                                        ││ PROC  execve /usr/local/bin/run-parts [run-parts --lsbsysinit /etc/update-motd.d] (pid:305 rc=-│"
"│                                        ││ PROC  execve /usr/sbin/run-parts [run-parts --lsbsysinit /etc/update-motd.d] (pid:305 rc=-2)   │"
"│                                        ││ PROC  execve /usr/bin/run-parts [run-parts --lsbsysinit /etc/update-motd.d] (pid:305 rc=0)     │"
"│                                        ││ PROC  FORK (0x1200011) (pid:305 rc=306)                                                        │"
"│                                        ││ PROC  execve /etc/update-motd.d/00-header [/etc/update-motd.d/00-header] (pid:306 rc=0)        │"
"│                                        ││ PROC  FORK (0x1200011) (pid:306 rc=307)                                                        │"
"└────────────────────────────────────────┘└────────────────────────────────────────────────────────────────────────────────────────────────┘"
" 01_file_exploration.ndjson  │ 17164 events total │ Command 1/10 │ 13299 events │ ▶ History   j/k:nav  ⏎:expand  Tab:pane  1-4:tab  q:quit  "
