bloodhound-tui/src/snapshots/bloodhound_tui__render_tests__tab_all.snap
---
source: bloodhound-tui/src/render_tests.rs
assertion_line: 160
expression: render(&app)
---
"┌ History (10 commands) ─────────────────┐┌ Output (0 lines) ──────────────────────────────────────────────────────────────────────────────┐"
"│00:00:06 ▸ [pre-session] (50/13299)     ││No terminal output for this command.                                                            │"
"│00:00:07 ▸ ls -la /etc/ (1/960)         ││                                                                                                │"
"│00:00:07 ▸ cat /etc/hostname (1/288)    ││                                                                                                │"
"│00:00:08 ▸ head -5 /etc/passwd (1/304)  ││                                                                                                │"
"│00:00:08 ▸ grep "root" /etc/passwd (1/32││                                                                                                │"
"│00:00:09 ▸ wc -l /etc/passwd (1/311)    ││                                                                                                │"
"│00:00:09 ▸ cat /etc/os-release (1/446)  ││                                                                                                │"
"│00:00:10 ▸ cat /etc/shells (1/284)      ││                                                                                                │"
"│00:00:10   exit (24)                    ││                                                                                                │"
"│00:00:10 ▸ logout (1/359)               ││                                                                                                │"
"│                                        ││                                                                                                │"
"│                                        ││                                                                                                │"
"│                                        │└────────────────────────────────────────────────────────────────────────────────────────────────┘"
"│                                        │┌ Events ────────────────────────────────────────────────────────────────────────────────────────┐"
"│                                        ││ 1:All │ 2:Exec │ 3:Syscall │ 4:Files │ 5:Network                                               │"
"│                                        │└────────────────────────────────────────────────────────────────────────────────────────────────┘"
"│                                        ││ SYS   3 (pid:291 rc=0)                                                                         │"
"│                                        ││ SYS   262 (pid:291 rc=0)                                                                       │"
"│                                        ││ FILE  openat /etc/passwd (O_RDONLY|O_CLOEXEC) (pid:291 rc=3)                                   │"
"│                                        ││ SYS   5 (pid:291 rc=0)                                                                         │"
"│                                        ││ SYS   8 (pid:291 rc=0)                                                                         │"
"│                                        ││ SYS   read (pid:291 rc=1265)                                                                   │"
"│                                        ││ SYS   3 (pid:291 rc=0)                                                                         │"
"│                                        ││ SYS   102 (pid:291 rc=0)                                                                       │"
"│                                        ││ SYS   104 (pid:291 rc=0)                                                                       │"
"│                                        ││ SYS   114 (pid:291 rc=0)                                                                       │"
"│                                        ││ SYS   113 (pid:291 rc=0)                                                                       │"
"│                                        ││ SYS   250 (pid:291 rc=955038687)                                                               │"
"│                                        ││ SYS   250 (pid:291 rc=0)                                                                       │"
"│                                        ││ SYS   113 (pid:291 rc=0)                                                                       │"
"│                                        ││ SYS   114 (pid:291 rc=0)                                                                       │"
"│                                        ││ FILE  openat  (O_RDONLY) (pid:291 rc=3)                                                        │"
"│                                        ││ SYS   5 (pid:291 rc=0)                                                                         │"
"│                                        ││ SYS   read (pid:291 rc=4096)                                                                   │"
"│                                        ││ SYS   read (pid:291 rc=4096)                                                                   │"
"│                                        ││ SYS   3 (pid:291 rc=0)                                                                         │"
"│                                        ││ FILE  openat /etc/login.defs (O_RDONLY) (pid:291 rc=3)                                         │"
"└────────────────────────────────────────┘└────────────────────────────────────────────────────────────────────────────────────────────────┘"
" 01_file_exploration.ndjson  │ 17164 events total │ Command 1/10 │ 13299 events │ ▶ History   j/k:nav  ⏎:expand  Tab:pane  1-5:tab  q:quit  "
